fix: bottom align solo timers in advanced view

--- a/packages/webui/src/client/ui/RundownView/RundownHeader/RundownHeader.scss
+++ b/packages/webui/src/client/ui/RundownView/RundownHeader/RundownHeader.scss
@@ -472,7 +472,7 @@
 
 	.rundown-header__show-timers {
 		display: flex;
-		align-items: flex-start;
+		align-items: flex-end;
 		gap: 1em;
 		cursor: pointer;
 		background: none;
